--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 600px;
+    height: 100vh;
     background-image: url(img/inicioPortada.png);
     background-attachment: fixed;
     background-position: center;
