--- a/estilos.css
+++ b/estilos.css
@@ -463,3 +463,172 @@ h4{
 #autores{
 	text-align: center;
 }
+
+/* ESTILOS DE BOTON GENERADORES DE ALFABETOS---------------*/
+
+ul.buttonGALF{
+	width: 60%;
+	list-style: none;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+ul.buttonGALF li{
+    margin:9px;
+}
+
+ul.buttonGALF li a{
+
+	text-decoration: none;
+	font-size: 16px;
+	text-align: center;
+
+	transition: color, background-color, 0.5s;
+	color: white; 
+	background-color: #00102A;
+
+	display: block;
+	padding: 10px 0px;
+	border-radius: 10px;
+}
+
+ul.buttonGALF li a:hover{
+	color: black;
+	background-color: #C79316;
+	transition: all 200ms;
+	cursor:pointer;
+	box-shadow: 1px 1px 20px 0px #00102A;
+}
+
+ul.bbuttonGALF li a .tab-text{
+	margin-left: 8px;
+}
+
+/* ESTILOS DEL BUTTONS GENERADORES DE ALFABETOS RESPONSIVO---------------*/
+
+@media screen and (max-width: 800px){
+	ul.buttonGALF{
+		width: 50%;
+	}
+
+	ul.buttonGALF li{
+    	margin: 4px;
+	}
+
+	ul.buttonGALF li a{
+		font-size: 12px;
+		padding: 5px 0px;
+	}
+}
+
+/* ESTILOS DEL BUTTON MOSTRAR ER---------------*/
+
+ul.buttonMostrarER{
+	width: 60%;
+	list-style: none;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+ul.buttonMostrarER li{
+    margin:9px;
+}
+
+ul.buttonMostrarER li a{
+
+	text-decoration: none;
+	font-size: 16px;
+	text-align: center;
+
+	transition: color, background-color, 0.5s;
+	color: white; 
+	background-color: #00102A;
+
+	display: block;
+	padding: 10px 0px;
+	border-radius: 10px;
+}
+
+ul.buttonMostrarER li a:hover{
+	color: black;
+	background-color: #C79316;
+	transition: all 200ms;
+	cursor:pointer;
+	box-shadow: 1px 1px 20px 0px #00102A;
+}
+
+ul.buttonMostrarER li a .tab-text{
+	margin-left: 8px;
+}
+
+
+/* ESTILOS DEL BUTTON MOSTRAR ER RESPONSIVO---------------*/
+
+@media screen and (max-width: 800px){
+	ul.buttonMostrarER{
+		width: 50%;
+	}
+
+	ul.buttonMostrarER li{
+    	margin: 4px;
+	}
+
+	ul.buttonMostrarER li a{
+		font-size: 12px;
+		padding: 5px 0px;
+	}
+}
+
+
+/* ESTILOS DE TABLAS ---------------*/
+.content-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 400px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin: auto;
+}
+
+.content-table thead tr {
+  background-color: #C79316;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+}
+
+.content-table th,
+.content-table td {
+  padding: 2px 1px;
+  text-align: center;
+}
+
+.content-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+
+/* ESTILOS DE TABLAS RESPONSIVO---------------*/
+
+@media screen and (max-width: 800px){
+
+	.content-table{
+		border-collapse: collapse;
+		margin: 10px 0;
+		font-size: 0.5em;
+		min-width: 200px;
+		border-radius: 1px 1px 0 0;
+		overflow: hidden;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+		margin: auto;
+	}
+	.content-table th,
+	.content-table td {
+	  padding: 2px 1px;
+	  text-align: center;
+	}
+}
