--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -1,6 +1,25 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'open sans';
+    font-size: 16px;
+}
+
+/* No olvides suscribirte a AlexCG Design */
+/*
+Web hecha con AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design
+        esta plantilla es libre para usar, así como otras plantillas más que tenemos en el canal...
+        ->>>> https://www.youtube.com/alexcgdesign <<<<-
+*/
+/* Header */
+
 header {
     width: 100%;
-    height: 100vh;
+    height: 650px;
     background-image: url(img/inicioPortada.png);
     background-attachment: fixed;
     background-position: center;
@@ -12,16 +31,16 @@ header {
 }
 
 header .textos {
-    margin-top: 150px;
+    margin-top: 152px;
     background-color: rgb(0,0,0,0.4);
 }
 
 header .titulo {
-    font-size: 60px;
+    font-size: 85px;
 }
 
 header .subtitulo {
-    font-size: 30px;
+    font-size: 42px;
     font-weight: 300;
     margin-bottom: 32px;
 }
@@ -47,59 +66,107 @@ header .boton:hover{
     box-shadow: 1px 1px 5px 0px white;
 }
 
-@media screen and (max-width: 800px){
-    
-    header {
-        width: 100%;
-        height: 350px;
-        background-image: url(img/inicioPortada.png);
-        background-attachment: fixed;
-        background-position: center;
-        background-size: cover;
-        position: relative;
-        overflow: hidden;
-        color: #fff;
-        text-align: center;
-    }
+.contenedor {
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+    padding: 52px 0;
+}
 
+footer {
+    background: rgb(28,29,47);
+    height: auto;
+}
+
+.titulo-footer,
+.subtitulo-footer {
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+    font-size: 56px;
+}
+
+.subtitulo-footer {
+    font-size: 16px;
+    margin-bottom: 64px;
+}
+
+form {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+input[type="text"],
+input[type="email"] {
+    display: inline-block;
+    width: 48%;
+    padding: 13px;
+    border: none;
+    color: #fff;
+    font-family: 'open sans';
+    background: white;
+    margin-bottom: 16px;
+    border-top: 5px solid rgba(37, 37, 33, .7);
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+    border-top: 5px solid rgba(255, 255, 255, 0.7);
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 200px;
+    min-height: 200px;
+    background: white;
+    padding: 13px;
+    border: none;
+    color: #fff;
+    font-family: 'open sans';
+    margin-bottom: 16px;
+}
+
+input[type="submit"] {
+    display: inline-block;
+    padding: 13px;
+    border: none;
+    color: #fff;
+    background: #C79316;
+    width: 96px;
+}
+
+/* Responsive */
+
+
+@media screen and (max-width:610px) {
     header .textos {
-        margin-top: 50px;
+        margin-top: 130px;
     }
 
     header .titulo {
-        font-size: 30px;
-    }
-
-    header .subtitulo {
-        font-size: 15px;
-        margin-bottom: 10px;
-    }
-
-    header .boton {
-        display: inline-block;
-        padding: 6px;
-        width: 60px;
-        border: 1px solid #fff;
-        color: #fff;
-        font-size: 10px;
-        text-align: center;
-        text-decoration: none;
-        border-radius: 10px;
+        font-size: 75px;
     }
 }
 
-@media all and (orientation: portrait){
-    .contain{
-        display: none;
+@media screen and (max-width:380px) {
+    header .textos {
+        margin-top: 100px;
     }
-    .containVertical{
-        display: block;
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        z-index: 1;
-        background: url(img/Fondo.png);
-        background-size: cover;
-        background-position: center;
+
+    header .titulo {
+        font-size: 65px;
+    }
+
+    header .subtitulo {
+        font-size: 25px;
+        margin-bottom: 32px;
     }
 }
