--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -20,7 +20,7 @@ Web hecha con AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG
 header {
     width: 100%;
     height: 650px;
-    background-image: url(img/inicioPortada.png);
+    background-image: url(img/inicioPortada2.png);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
