--- a/estilos.css
+++ b/estilos.css
@@ -453,7 +453,7 @@ h4{
 
 /* ESTILOS DE IMAGENES GIF ANIMACIONES---------------*/
 
-.secciones article img{
+img{
 	max-width: 75%;
 	justify-content: center;
 	display:block;
@@ -692,5 +692,30 @@ ul.buttonsEjER li a .tab-text{
 	
 	ul.buttonsEjER li a .tab-text{
 		margin-left: 10px;
+	}
+}
+
+h5{
+	text-align: center;
+	padding-bottom: 5px;
+}
+
+@media screen and (max-width: 800px){
+	h5{
+		font-size: 10px;
+	}
+}
+
+
+
+@media screen and (max-width: 800px){
+	h2{
+		font-size: 16px;
+	}
+}
+
+@media screen and (max-width: 800px){
+	h3{
+		font-size: 16px;
 	}
 }
