--- a/estilosModals.css
+++ b/estilosModals.css
@@ -15,7 +15,7 @@
 	top:0;
 	width: 100%;
 	height:100%;
-	background: rgba(0, 0, 0, 0.452);
+	background: rgba(0, 0, 0, 0.5);
 }
 
 .contenido-modal{
@@ -26,7 +26,10 @@
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .4);
 	animation-name: modal;
 	animation-duration: 1s;
+	/* -webkit-box-shadow: 0px 0px 40px -10px rgba(255,255,255,1); */
+	/*background: linear-gradient(#00102A, #C79316);*/
 }
+
 @keyframes modal{
 	from{top:-330px; opacity:0;}
 	to{top:0; opacity:1;}
@@ -44,7 +47,7 @@
 
 .modal-header, .footer{
 	padding: 8px 16px;
-	background: #34495e;
+	background: #00102A;
 	color:#f2f2f2;
 }
 
@@ -54,7 +57,7 @@
 
 @media screen and (max-width:900px){
 	.contenido-modal{
-		width: 70%;
+		width: 60%;
 	}
 	.textos{
 		padding: 150px;
