--- a/estilos.css
+++ b/estilos.css
@@ -27,29 +27,6 @@ body{
 	box-shadow: 0 0 8px 0 rgba(0, 0, 0, .4);
 }
 
-
-.contenedor { display:block; }
-         @media only screen and (orientation:portrait){
-            .contenedor {  
-                  -webkit-transform: rotate(90deg);
-                  -moz-transform: rotate(90deg);
-                  -o-transform: rotate(90deg);
-                  -ms-transform: rotate(90deg);
-                  transform: rotate(90deg);
-                 }
- 
-         }
-         @media only screen and (orientation:landscape){
-            .contenedor {  
-                  -webkit-transform: rotate(0deg);
-                  -moz-transform: rotate(0deg);
-                  -o-transform: rotate(0deg);
-                  -ms-transform: rotate(0deg);
-                  transform: rotate(0deg);
-                 }
-         }
-
-         
 ul.tabs{
 	width: 100%;
 	background: rgb(0,16,42);
@@ -152,6 +129,21 @@ ul.tabs li a .tab-text{
 	display: none;
 }
 
+@media all and (orientation: portrait){
+	.contenedor{
+		display: none;
+	}
+	.contenedorVertical{
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		z-index: 1;
+		background: url(img/Fondo.png);
+		background-size: cover;
+		background-position: center;
+	}
+}
 
 /* ESTILOS DE LOS BUTTONS MENU  --------------------------*/
 
