--- a/estilos.css
+++ b/estilos.css
@@ -589,7 +589,7 @@ ul.buttonMostrarER li a .tab-text{
 .content-table {
   border-collapse: collapse;
   margin: 25px 0;
-  font-size: 0.9em;
+  font-size: 1em;
   min-width: 400px;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
@@ -640,19 +640,19 @@ ul.buttonMostrarER li a .tab-text{
 /* ESTILOS BUTTONS EJEMPLOS -------------------------*/
 
 ul.buttonsEjER{
-	width: 100%;
+	width: 40%;
 	list-style: none;
-	display: flex;
 	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 ul.buttonsEjER li{
-	width: 22%;
-	float:left;
-    margin:0px 10px;
+    margin:9px;
 }
 
 ul.buttonsEjER li a{
+
 	text-decoration: none;
 	font-size: 16px;
 	text-align: center;
@@ -662,7 +662,7 @@ ul.buttonsEjER li a{
 	background-color: #00102A;
 
 	display: block;
-	padding: 20px 8px;
+	padding: 15px 0px;
 	border-radius: 10px;
 }
 
@@ -678,6 +678,22 @@ ul.buttonsEjER li a .tab-text{
 	margin-left: 8px;
 }
 
+/* ESTILOS DEL BUTTONS MENU EN PANTALLA RESPONSIVO ---------------*/
+
+@media screen and (max-width: 800px){
+	ul.buttonsEjER{
+		width: 50%;
+	}
+
+	ul.bbuttonsEjER li{
+    	margin: 4px;
+	}
+
+	ul.buttonsEjER li a{
+		font-size: 12px;
+		padding: 10px 0px;
+	}
+}
 
 
 /* ESTILOS DEL BUTTONS MENU - TEORIA HORIZONTAL RESPONSIVO ---------------*/
@@ -699,6 +715,7 @@ ul.buttonsEjER li a .tab-text{
 }
 
 h5{
+	font-size: 20px;
 	text-align: center;
 	padding-bottom: 5px;
 }
