--- a/estilos.css
+++ b/estilos.css
@@ -13,6 +13,10 @@ body{
 	font-family: 'Roboto', sans-serif;
 	background-color: rgb(21,23,44);
 	max-width: 100%;
+	width: 100%;
+    height: 100vh;
+    background: url("img/bg.png") center no-repeat;
+    background-size: cover;
 }
 
 /* ESTILOS DEL ENCABEZADO MENU Y SECCIONES --------------------------*/
@@ -24,7 +28,7 @@ body{
 	background: url(img/fondoSeccion.png);
 	background-repeat: no-repeat;
 	font-family: 'Roboto', sans-serif;
-	box-shadow: 0 0 8px 0 rgba(0, 0, 0, .4);
+	box-shadow: 0px 0px 8px 5px rgba(0, 0, 0, .4);
 }
 
 ul.tabs{
