--- a/estilosEvaluacion.css
+++ b/estilosEvaluacion.css
@@ -16,6 +16,7 @@ body{
     height: 100vh;
     position: relative;
     text-align: center;
+     display:block;
 }
 
 .title-wrapper{
@@ -176,4 +177,24 @@ h5{
     .option-text{
         font-size: 1.2rem;
     }
+}
+
+@media only screen and (orientation:portrait){
+    #container {  
+        -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+
+}
+@media only screen and (orientation:landscape){
+    #container {  
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      -o-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+      transform: rotate(90deg);
+  }
 }
