--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -21,7 +21,7 @@ Web hecha con AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG
 
 header {
     width: 100%;
-    height: 650px;
+    height: 100vh;
     background-image: url(img/inicioPortada2.png);
     background-attachment: fixed;
     background-position: center;
@@ -66,94 +66,6 @@ header .boton:hover{
     transition: all 600ms;
     cursor:pointer;
     box-shadow: 1px 1px 5px 0px white;
-}
-
-.contenedor {
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    overflow: hidden;
-    padding: 52px 0;
-}
-
-footer {
-    background: rgb(28,29,47);
-    height: auto;
-}
-
-.titulo-footer,
-.subtitulo-footer {
-    color: #fff;
-    text-align: center;
-    font-weight: 400;
-    font-size: 56px;
-}
-
-.subtitulo-footer {
-    font-size: 16px;
-    margin-bottom: 64px;
-}
-
-form {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: auto;
-}
-
-input[type="text"] {
-    display: inline-block;
-    width: 48%;
-    padding: 13px;
-    border: none;
-    color: black;
-    font-family: 'open sans';
-    background: white;
-    margin-bottom: 16px;
-    border-top: 5px solid rgba(37, 37, 33, .7);
-}
-
-input[type="email"]{
-    display: inline-block;
-    width: 100%;
-    padding: 13px;
-    border: none;
-    color: black;
-    font-family: 'open sans';
-    background: white;
-    margin-bottom: 16px;
-    border-top: 5px solid rgba(37, 37, 33, .7);
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-textarea:focus {
-    border-top: 5px solid rgba(255, 255, 255, 0.7);
-}
-
-textarea {
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
-    max-height: 200px;
-    min-height: 200px;
-    background: white;
-    padding: 13px;
-    border: none;
-    color: black;
-    font-family: 'open sans';
-    margin-bottom: 16px;
-}
-
-input[type="submit"] {
-    display: inline-block;
-    padding: 13px;
-    border: none;
-    color: #fff;
-    background: #C79316;
-    width: 96px;
 }
 
 /* Responsive */
