--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -21,7 +21,7 @@ Web hecha con AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG
 
 header {
     width: 100%;
-    height: 100vh;
+    height: 650px;
     background-image: url(img/inicioPortada2.png);
     background-attachment: fixed;
     background-position: center;
@@ -77,6 +77,10 @@ header .boton:hover{
 
     header .titulo {
         font-size: 75px;
+    }
+
+    header{
+        height: 800px;
     }
 }
 
