--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -1,54 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-body {
-    font-family: 'Roboto';
-    font-size: 16px;
-}
-
-/* No olvides suscribirte a AlexCG Design */
-/*
-Web hecha con AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design
-        esta plantilla es libre para usar, así como otras plantillas más que tenemos en el canal...
-        ->>>> https://www.youtube.com/alexcgdesign <<<<-
-*/
-/* Header */
-
-header {
+.hero{
     width: 100%;
-    height: 650px;
-    background-image: url(img/inicioPortada2.png);
-    background-attachment: fixed;
-    background-position: center;
+    height: 100vh;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
+    url("img/inicioPortada2.png") center no-repeat;
     background-size: cover;
-    position: relative;
-    overflow: hidden;
-    color: #fff;
+}
+
+.text{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #eee;
     text-align: center;
 }
 
-header .textos {
-    margin-top: 152px;
-    background-color: rgb(0,0,0,0.4);
+.text h1{
+    font-size: 6rem;
+    margin: 2rem 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-header .titulo {
-    font-size: 85px;
-}
-
-header .subtitulo {
-    font-size: 42px;
+.text h2{
+    font-size: 1.5rem;
+    text-transform: uppercase;
     font-weight: 300;
-    margin-bottom: 32px;
+    font-family: 'Roboto', sans-serif;
 }
 
-header .boton {
-    display: inline-block;
+.text p{
+    font-size: 1.6rem;
+    margin-bottom: 5rem;
+}
+
+.text .btn{
+     display: inline-block;
     padding: 6px;
     width: 128px;
     border: 1px solid #fff;
@@ -60,7 +50,7 @@ header .boton {
     font-family: 'Roboto';
 }
 
-header .boton:hover{
+.text .btn:hover{
     color: black;
     background-color: #C79316;
     transition: all 600ms;
@@ -68,33 +58,13 @@ header .boton:hover{
     box-shadow: 1px 1px 5px 0px white;
 }
 
-/* Responsive */
-
-@media screen and (max-width:610px) {
-    header .textos {
-        margin-top: 130px;
+@media screen and (max-width: 830px){
+    .text h1{
+        font-size: 4rem;
     }
 
-    header .titulo {
-        font-size: 75px;
-    }
-
-    header{
-        height: 800px;
+    .text .btn{
+        font-size: 1.2rem;
     }
 }
 
-@media screen and (max-width:380px) {
-    header .textos {
-        margin-top: 100px;
-    }
-
-    header .titulo {
-        font-size: 65px;
-    }
-
-    header .subtitulo {
-        font-size: 25px;
-        margin-bottom: 32px;
-    }
-}
