--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+body{
 
+}
 .hero{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
-    url("img/inicioPortada2.png") center no-repeat;
+    background: url("img/inicioPortada2.png") center no-repeat;
     background-size: cover;
 }
 
