--- a/estilosHeader.css
+++ b/estilosHeader.css
@@ -8,6 +8,7 @@ body{
     height: 100vh;
     background: url("img/inicioPortada2.png") center no-repeat;
     background-size: cover;
+    background-color: rgb(28,29,47);
 }
 
 .text{
@@ -24,6 +25,7 @@ body{
     font-size: 6rem;
     margin: 2rem 0;
     font-family: 'Roboto', sans-serif;
+    text-shadow: -2px -2px 2px #000;
 }
 
 .text h2{
@@ -31,6 +33,8 @@ body{
     text-transform: uppercase;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
+    -webkit-text-stroke: 0.5px black;
+    text-shadow: -2px -2px 1px #000;
 }
 
 .text p{
@@ -39,7 +43,7 @@ body{
 }
 
 .text .btn{
-     display: inline-block;
+    display: inline-block;
     padding: 6px;
     width: 128px;
     border: 1px solid #fff;
