--- a/estilosEvaluacionER.css
+++ b/estilosEvaluacionER.css
@@ -13,7 +13,18 @@
     background: #007bff;
 }
 
-.start_btn,
+@media screen and (max-width: 800px){
+    #buttonStart button{
+        font-size: 13px;
+        padding: 7px 10px;
+        font-weight: 100;
+    }
+    #box{
+        height: 300px;
+        width: 500px;
+    }
+}
+
 .info_box,
 .quiz_box,
 .result_box{
@@ -38,7 +49,7 @@
     font-size: 20px;
     font-weight: 500;
     color: #fff;
-    padding: 20px 30px;
+    padding: 10px 10px;
     outline: none;
     border: none;
     border-radius: 5px;
