--- a/estilosEvaluacion.css
+++ b/estilosEvaluacion.css
@@ -204,13 +204,14 @@ h5{
     background-color: #00102A;
     display: inline-block;
     padding: 10px;
-    width: 200px;
+    width: 120px;
     border: 1px solid #fff;
     color: #fff;
     font-size: 24px;
     text-align: center;
     text-decoration: none;
-    border-radius: 24px;
+    border-radius: 35px;
+        border: 2px solid rgba(238, 228, 228, 0.822);
     font-family: 'Roboto';
 }
 
